--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -12,9 +12,9 @@ Luke Palmer <luke@luqui.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 8 Mar 2004
-  Last Modified: 1 May 2006
+  Last Modified: 9 May 2006
   Number: 3
-  Version: 26
+  Version: 27
 
 =head1 Changes to existing operators
 
@@ -496,6 +496,15 @@ On the plus side, this works without a star:
 
     @args = (\%a,'foo','bar');
     $x = [dehash] @args;
+
+In scalar context, a reduce operator returns only the final result, but
+in list context, the reduce operator also returns all intermediate results
+lazily:
+
+    say [+], 1..*  #  (1, 3, 6, 10, 15, ...)
+
+Unlike other reduction operators, the C<[;]> operator is not sensitive
+to list context.
 
 =head1 Junctive operators
 
