patch from jerry++.
git-svn-id: http://svn.pugscode.org/pugs@23407 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -494,8 +494,8 @@ structural type of a variable:
     $   scalar
     @   ordered array
     %   unordered hash (associative array)
-    &   code
-    ::  package/module/class/role/subset/enum/type
+    &   code/rule/token/regex
+    ::  package/module/class/role/subset/enum/type/grammar
     @@  multislice view of @
 
 Within a declaration, the C<&> sigil also declares the visibility of the
