* S06: "but true" is now spelled as "but True"
git-svn-id: http://svn.pugscode.org/pugs@23408 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -1575,7 +1575,7 @@ The C<but I<NAME> (I<DATA>)> syntax specifies run-time properties on values:
     sub system {
         ...
         return $error but false if $error;
-        return 0 but true;
+        return 0 but True;
     }
 
 Properties are predeclared as roles and implemented as mixins--see S12.
